@@ -92,6 +92,9 @@ div.recentchanges {
 .recentchanges .desc {
 	display: none;
 }
+.recentchanges .diff {
+	display: none;
+}
 .recentchanges .committer {
 	float: left;
 	margin: 0;
