@@ -33,4 +33,11 @@
 </TMPL_IF>
 </TMPL_LOOP>
 </div>
+<TMPL_IF NAME="DIFF">
+<div class=diff>
+<pre>
+<TMPL_VAR NAME="DIFF" ESCAPE="HTML">
+</pre>
+</div>
+</TMPL_IF>
 <!-- <TMPL_VAR REV> -->
