@@ -9,6 +9,12 @@ ikiwiki (2.41) UNRELEASED; urgency=low
   * The meta plugin now allows for the robots tag to be specified without the
     risk of it being scrubbed.
 
+  [ Joey Hess ]
+  * Add recentchangesdiff plugin that adds diffs to the recentchanges feeds.
+  * rcs_diff is a new function that rcs modules should implement.
+  * Implemented rcs_diff for git, svn, and tla (tla version untested).
+    Mercurial and monotone still todo.
+
  -- martin f. krafft <madduck@debian.org>  Sun, 02 Mar 2008 17:46:38 +0100
 
 ikiwiki (2.40) unstable; urgency=low
